--- a/JiaoBaoYun-hb/html/micro-course/course-introduction.html
+++ b/JiaoBaoYun-hb/html/micro-course/course-introduction.html
@@ -9,7 +9,11 @@
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/utils/common.css" rel="stylesheet" />
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
-
+		<script type="text/javascript">
+			function onImageError(img) {
+				img.src = "../../image/utils/default_personalimage.png"
+			}
+		</script>
 	</head>
 
 	<body style="background-color: #ffffff;">
@@ -20,18 +24,18 @@
 		<div id="divContent" class="mui-content" style="background-color: #ffffff;">
 			<div style="font-size: 16px;padding-left: 10px;padding-top: 15px;font-weight: 700;">授课老师</div>
 			<div style="position: relative;">
-				<img id="teaHeadImg" style="position: absolute;z-index: 2;background-color: #ffffff;left: 20px;width: 40px;height: 40px;border-radius: 50%;" src="http://ojhtgzg1k.bkt.clouddn.com/jbypc/pc/jiaoshi20170615.jpg%E8%80%81%E5%B8%88%E5%A4%B4%E7%BB%9F%E4%B8%80%E7%94%A8%E8%BF%99%E4%B8%80%E4%B8%AA.jpg" onerror="onImageError(this);">
+				<img id="teaHeadImg" style="position: absolute;z-index: 2;background-color: #ffffff;left: 20px;width: 40px;height: 40px;border-radius: 50%;" src="" onerror="onImageError(this)">
 				<div id="teaInfo-container" style="position: absolute;z-index: 1;border-color: #1db8f1;height: auto;border-width:1px ;border-style:dashed;right: 20px;left: 40px;top: 20px;">
-					<div  style="padding:12px 10px;">
-						<p id="teaName" style="text-align: center;color: #323232;font-size: 16px;font-weight: 700;">Bruce</p>
-						<span id="teaInfo" style="text-align: center;color: #323232;font-size: 15px;">英语高级讲师，曾留学美利坚，就职于孔子学院</span>
+					<div style="padding:12px 10px;">
+						<p id="teaName" style="text-align: center;color: #323232;font-size: 16px;font-weight: 700;"></p>
+						<span id="teaInfo" style="text-align: center;color: #323232;font-size: 15px;"></span>
 					</div>
 				</div>
 			</div>
 			<p id="line" style="background-color:#e4e4e4;height: 1px;"></p>
 			<div>
 				<div style="font-size: 16px;padding-left: 10px;font-weight: 700;">课程介绍</div>
-				<p id="courseInfo" style="padding-left: 40px;color: #323232;font-size: 15px;padding-right: 10px;padding-top: 10px;">每日学英语，让英语学习成为一种习惯。可以学到精彩短句、口语，还可以查单词，搜英语资料。</p>
+				<p id="courseInfo" style="padding-left: 40px;color: #323232;font-size: 15px;padding-right: 10px;padding-top: 10px;"></p>
 			</div>
 			<p style="background-color:#e4e4e4;height: 1px;margin-top: 10px;"></p>
 			<p id="history" style="color: black;font-size: 16px;padding-left: 10px;padding-right: 10px;font-weight: 700;padding-top: 5px;">查看历史<span class="mui-icon iconfont icon-fanhui2" style="color:#b7b7b7;float: right;padding-top: 2px;"></span></p>
@@ -39,33 +43,6 @@
 			<div align="center" style="padding-top: 10px;">
 				<button id="focusBtn" class="mui-btn mui-btn-green btn-commit" style="background-color: #1db8F1;border-color:#1db8F1 ;border: 0;margin-left: 10px;margin-right: 10px;width: 95%;height: 40px;font-size: 16px;">关注</button>
 			</div>
-			<!--<div style="font-size: 16px;padding-left: 10px;padding-top: 15px;font-weight: 700;">授课老师</div>
-			<div style="position: relative;">
-				<img id="teaHeadImg" style="position: absolute;z-index: 2;background-color: #ffffff;left: 20px;width: 40px;height: 40px;border-radius: 50%;" src="../../image/utils/default_personalimage.png" onerror="onImageError(this);" />
-				<div style="position: absolute;z-index: 1;border-color: #1db8f1;height: auto;border-width:1px ;border-style:dashed;right: 20px;left: 40px;top: 20px;">
-
-					<div style="padding:12px 10px;">
-						<p id="teaName" style="text-align: center;color: #323232;font-size: 16px;font-weight: 700;"></p>
-						<span id="teaInfo" style="text-align: center;color: #323232;font-size: 15px;">
-					</span>
-					</div>
-				</div>
-				
-			</div>
-			<p style="background-color:#e4e4e4;height: 1px;"></p>
-			<div>
-				<div style="font-size: 16px;padding-left: 10px;font-weight: 700;">课程介绍</div>
-				<p id="courseInfo" style="padding-left: 40px;color: #323232;font-size: 15px;padding-right: 10px;padding-top: 10px;">
-				</p>
-			</div>
-			<p style="background-color:#e4e4e4;height: 1px;margin-top: 10px;"></p>
-			<p id="history" style="color: black;font-size: 16px;padding-left: 10px;padding-right: 10px;font-weight: 700;padding-top: 5px;">查看历史<span class="mui-icon iconfont icon-fanhui2" style="color:#b7b7b7;float: right;padding-top: 2px;"></span></p>
-			<p style="background-color:#e4e4e4;height: 1px;margin-top: 15px;"></p>
-			<div align="center" style="padding-top: 10px;">
-				<button id="focusBtn" class="mui-btn mui-btn-green btn-commit" style="background-color: #1db8F1;border-color:#1db8F1 ;border: 0;margin-left: 10px;margin-right: 10px;width: 95%;height: 40px;font-size: 16px;">关注</button>
-
-			</div>-->
-
 		</div>
 
 		<!--mui.js-->
@@ -77,9 +54,6 @@
 		<script src="../../js/publicMicroClass.js" type="text/javascript" charset="utf-8"></script>
 	</body>
 	<script type="text/javascript">
-		function onImageError(img) {
-			img.src = "../../image/utils/default_personalimage.png"
-		}
 		var nodes = {
 			title: document.getElementById("title"),
 			teaHeadImg: document.getElementById("teaHeadImg"),
@@ -172,9 +146,9 @@
 			nodes.teaInfo.innerHTML = courseInfo.TeacherNote;
 			nodes.courseInfo.innerHTML = courseInfo.CourseNote;
 			document.getElementById("divContent").className = 'mui-content'
-			var teaHeight=document.getElementById("teaInfo-container").offsetHeight;
-			document.getElementById("line").style.marginTop=teaHeight+40+'px';
-			
+			var teaHeight = document.getElementById("teaInfo-container").offsetHeight;
+			document.getElementById("line").style.marginTop = teaHeight + 40 + 'px';
+
 		}
 		events.addTap('history', function() {
 			events.openNewWindowWithData('history-records.html', courseModel)
