课程信息改版

--- a/JiaoBaoYun-hb/html/micro-course/course_details.html
+++ b/JiaoBaoYun-hb/html/micro-course/course_details.html
@@ -659,7 +659,7 @@
 				//课程介绍
 				document.getElementById('introduction').addEventListener('tap', function() {
 					document.getElementById("audio").pause();
-					events.openNewWindowWithData('course-introduction.html', main.data);
+					events.openNewWindowWithData('course-info.html', main.data);
 				});
 
 				//查看其它节次或者查看更多
