老师作业评论界面 时间显示格式修改

--- a/JiaoBaoYun-hb/html/homework/homework-commented.html
+++ b/JiaoBaoYun-hb/html/homework/homework-commented.html
@@ -11,24 +11,20 @@
 		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
 		<link href="../../css/homework/subjects-icon.css" rel="stylesheet" />
 		<link href="../../css/utils/preview.css" rel="stylesheet" />
-		<script src="../../js/mui.min.js"></script>
-		<script src="../../js/storageKeyName.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../../js/mui.zoom.js"></script>
-		<script src="../../js/mui.previewimage.js"></script>
-		<script src="../../js/publicHomeworkProtocol.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../../js/publicProtocol.js" type="text/javascript" charset="utf-8"></script>
-		<script src="../../js/utils/events.js" type="text/javascript"></script>
 		<style type="text/css">
 			/*标题图片*/
+			
 			.subject-icon {
 				font-size: 50px;
 			}
 			/*cell标题*/
+			
 			.divider-color {
 				color: #383838;
 				background-color: #f2f3f5;
 			}
 			/*cell*/
+			
 			.cell-color {
 				color: #808080;
 				background-color: white;
@@ -40,8 +36,13 @@
 				width: 50px;
 				height: 50px;
 			}
-			.homework-img{
+			
+			.homework-img {
 				padding: 0 3px;
+			}
+			
+			.mui-content>.mui-table-view:first-child {
+				margin-top: 0;
 			}
 		</style>
 
@@ -54,43 +55,48 @@
 			<a id="modifyHomework" class="mui-pull-right display-none">修改</a>
 		</header>
 
-		<div class="mui-content mui-scroll-wrapper">
-			<div class="mui-scroll">
-				<ul id="list" class="mui-table-view">
-					<li class="mui-table-view-cell mui-media">
-						<img id="headImg" style="display: none;margin-top: 5px;" class="mui-media-object mui-pull-left dynamic-personal-image" />
-						<!--<img id="headImg">-->
-						<span id="img" class=" iconfont subject-icon dynamic-personal-image" style="margin-left: -10px;display: none;" hidden="hidden"></span>
-						<!--</img>-->
-						<div class="mui-media-body" style="margin-top: 5px;">
-							<h5 id="homeworkTitle" style="color: #404040;"></h5>
-							<p id="publishDate" class='mui-ellipsis' style="color: #747474;"></p>
-						</div>
-						<div style="margin-top: 10px;">
-							<hr id="hr" style="height:1px;border:none;border-top:1px solid #ededed;" />
-						</div>
-						<div class="mui-media-body">
-							<p id="homeWorkContent" style="color: #323232;font-size: 15px;margin-bottom: 5px;"></p>
-							<div id="brief-imgs" class="brief-imgs"></div>
-							
-						</div>
-					</li>
-					<li id="stuHomework" class="mui-table-view-divider divider-color">学生答案</li>
-					<li id="stuCell" class="mui-table-view-cell">
-						<div class="mui-media-body">
-							<font id="stuResult" class="cell-color" style="font-size: 15px;color: #323232;"></font>
-							<div id="brief-imgs-stu" class="brief-imgs"></div>
-						</div>
-					</li>
-					<li id="comment" class="mui-table-view-divider divider-color">作业评语</li>
-					<li class="mui-table-view-cell">
-						<div class="mui-media-body" style="min-height: 50px;">
-							<font id="commentContent" class="cell-color"  style="font-size: 15px;color: #323232;"></font>
-						</div>
-					</li>
-				</ul>
-			</div>
+		<div class="mui-content">
+			<ul id="list" class="mui-table-view">
+				<li class="mui-table-view-cell mui-media">
+					<img id="headImg" style="display: none;margin-top: 5px;" class="mui-media-object mui-pull-left dynamic-personal-image" />
+					<!--<img id="headImg">-->
+					<span id="img" class=" iconfont subject-icon dynamic-personal-image" style="margin-left: -10px;display: none;" hidden="hidden"></span>
+					<!--</img>-->
+					<div class="mui-media-body" style="margin-top: 5px;">
+						<h5 id="homeworkTitle" style="color: #404040;"></h5>
+						<p id="publishDate" class='mui-ellipsis' style="color: #747474;"></p>
+					</div>
+					<div style="margin-top: 10px;">
+						<hr id="hr" style="height:1px;border:none;border-top:1px solid #ededed;" />
+					</div>
+					<div class="mui-media-body">
+						<p id="homeWorkContent" style="color: #323232;font-size: 15px;margin-bottom: 5px;"></p>
+						<div id="brief-imgs" class="brief-imgs"></div>
+
+					</div>
+				</li>
+				<li id="stuHomework" class="mui-table-view-divider divider-color">学生答案</li>
+				<li id="stuCell" class="mui-table-view-cell">
+					<div class="mui-media-body">
+						<font id="stuResult" class="cell-color" style="font-size: 15px;color: #323232;"></font>
+						<div id="brief-imgs-stu" class="brief-imgs"></div>
+					</div>
+				</li>
+				<li id="comment" class="mui-table-view-divider divider-color">作业评语</li>
+				<li class="mui-table-view-cell">
+					<div class="mui-media-body" style="min-height: 50px;">
+						<font id="commentContent" class="cell-color" style="font-size: 15px;color: #323232;"></font>
+					</div>
+				</li>
+			</ul>
 		</div>
+		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/utils/vue.min.js"></script>
+		<script src="../../js/utils/events.js"></script>
+		<script src="../../js/mui.zoom.js"></script>
+		<script src="../../js/mui.previewimage.js"></script>
+		<script src="../../js/publicProtocol.js"></script>
+		<script src="../../js/publicHomeworkProtocol.js"></script>
 		<script src="../../js/homework/homework-commented.js"></script>
 	</body>
 
