增加移动版 vue更改为product

--- a/JiaoBaoYun-hb/html/micro-course/course-info.html
+++ b/JiaoBaoYun-hb/html/micro-course/course-info.html
@@ -122,7 +122,7 @@
 		</div>
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/utils/events.js"></script>
-		<script src="../../js/utils/vue.js"></script>
+		<script src="../../js/utils/vue.min.js"></script>
 		<script src="../../js/micro-course/course-info.js"></script>
 		<script src="../../js/publicProtocol.js"></script>
 		<script src="../../js/publicMicroClass.js"></script>
