作业发布和作业评论 滚动

--- a/JiaoBaoYun-hb/html/homework/homework-publish.html
+++ b/JiaoBaoYun-hb/html/homework/homework-publish.html
@@ -31,8 +31,8 @@
 			<a id="submitBtn" class="mui-pull-right header-publish">提交</a>
 		</header>
 		<!--content-->
-		<div class="mui-content mui-scroll-wrapper">
-			<div class="mui-scroll">
+		<div class="mui-content">
+
 			<!--表单-->
 			<form class="mui-input-group">
 				<div class="mui-input-row">
@@ -48,7 +48,7 @@
 					<a id="select-classes" class="select-classes mui-icon mui-icon-arrowright"></a>
 				</div>
 				<div class="input-erea">
-					<textarea id="publish-content" class="publish-content"  maxlength="500" placeholder="输入你要布置的作业内容,最多500字！"></textarea>
+					<textarea id="publish-content" class="publish-content" maxlength="500" placeholder="输入你要布置的作业内容,最多500字！"></textarea>
 					<!--一期隐藏拍照、相机、录音功能-->
 					<div class="publish-extras">
 						<!--<a id="getRecord" class="mui-icon iconfont icon-yuyin"></a>-->
@@ -56,7 +56,7 @@
 						<a id="get_gallery" class="mui-icon iconfont icon-tuku"></a>
 						<a id="get_record" class="mui-icon iconfont icon-yuyin3"></a>
 						<a id="getVideo" class="mui-icon iconfont icon-shipin"></a>
-						
+
 					</div>
 				</div>
 				<div class="online-container">
@@ -68,29 +68,7 @@
 				<p class="extra-info"><span class="mui-icon mui-icon-info"></span>开启在线提交后，学生需提交文字反馈</p>
 				<div id="pictures" class="img-container imgs-extras"></div>
 			</form>
-			</div>
 		</div>
-		<!--<div id="play" class="rp">
-			<div id="ptime" class="ptime">00:00:00/00:00:00</div><br/>
-			<div id="progress" class="progress">
-				<div id="schedule" class="schedule"></div>
-			</div>
-			<br/>
-			<div class="stop" onclick="stopPlay()">
-				<a class="mui-icon iconfont icon-tingzhi"></a>
-			</div>
-		</div>
-		<div id="record" class="rp">
-			<div style="width:100%;height:20%;"></div>
-			<div class="rprogress">
-				<div class="rschedule"></div>
-			</div>
-			<br/>
-			<div id="rtime" class="rtime">00:00:00</div><br/>
-			<div class="stop" onclick="stopRecord()">
-				<a class="mui-icon iconfont icon-tingzhi"></a>
-			</div>
-		</div>-->
 		<!--mui库-->
 		<script src="../../js/mui.min.js"></script>
 		<!--公共事件模块-->
@@ -105,7 +83,7 @@
 		<script src="../../js/mui.zoom.js"></script>
 		<script src="../../js/mui.previewimage.js"></script>
 		<!--录音模块-->
-	<!--	<script src="../../js/utils/audio.js"></script>-->
+		<!--	<script src="../../js/utils/audio.js"></script>-->
 		<!--协议-->
 		<script src="../../js/publicHomeworkProtocol.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/publicProtocol.js" type="text/javascript" charset="utf-8"></script>
