--- a/JiaoBaoYun-hb/html/homework/homework-comment.html
+++ b/JiaoBaoYun-hb/html/homework/homework-comment.html
@@ -19,44 +19,40 @@
 			<h1 class="mui-title">作业评论</h1>
 		</header>
 
-		<div class="mui-content mui-scroll-wrapper">
-			<div class="mui-scroll">
-				<!--这里放置真实显示的DOM内容-->
-				<!--作业详情区-->
-				<h6 class="comment-item">完成的作业</h6>
-				<div class="homework-container">
-					<div class='student-info'>
-						<img id="stu-head" class="stuInfo-img" src="" />
-						<div class='stuInfo-words'>
-							<h5 id='stu-name' class="stu-name"></h5>
-							<p id='submit-time' class="submit-time"></p>
-						</div>
-					</div>
-					<div id="homework-info" class="homework-info">
-						<p class="answer-info"></p>
-						<div id="answer-imgs" class="answer-imgs"></div>
+		<div class="mui-content">
+			<!--这里放置真实显示的DOM内容-->
+			<!--作业详情区-->
+			<h6 class="comment-item">完成的作业</h6>
+			<div class="homework-container">
+				<div class='student-info'>
+					<img id="stu-head" class="stuInfo-img" src="" />
+					<div class='stuInfo-words'>
+						<h5 id='stu-name' class="stu-name"></h5>
+						<p id='submit-time' class="submit-time"></p>
 					</div>
 				</div>
-				<!--<div class="result-container">
-					<h6 class="comment-item">作业结果</h6>
-					<p id="result-text" class="result-text">
-					</p>
-				</div>-->
-				<!--评论区-->
-				<div class="comment-container">
-					<h6 class="comment-item">作业评语</h6>
-					<div class="comment-holder display-none">
-						<textarea id="comment-area" class='comment-area' rows="10" placeholder="请输入评语，最多1000字"></textarea>
-						<button id="btn-comment" type="submit" class="mui-btn mui-btn-green btn-submit">提交评论</button>
+				<div id="homework-info" class="homework-info">
+					<p class="answer-info"></p>
+					<div id="answer-imgs" class="answer-imgs"></div>
+				</div>
+			</div>
+
+			<!--评论区-->
+			<div class="comment-container">
+				<h6 class="comment-item">作业评语</h6>
+				<div class="comment-holder display-none" >
+					<textarea id="comment-area" class='' rows="10"  placeholder="请输入评语，最多1000字"></textarea>
+					<button id="btn-comment" type="submit" class="mui-btn mui-btn-green btn-submit">提交评论</button>
+				</div>
+				<div class="commented-holder display-none">
+					<p id="commented-words" class="commented-words homework-info work-result"></p>
+					<div class="change-container">
+						<div class="change-holder"><span class="change-comment iconfont icon-write"></span></div>
 					</div>
-					<div class="commented-holder display-none">
-						<p id="commented-words" class="commented-words homework-info work-result"></p>
-						<div class="change-container"><div class="change-holder"><span class="change-comment iconfont icon-write"></span></div></div> 
-					</div>
-					
 				</div>
 
 			</div>
+
 		</div>
 
 		<script src="../../js/mui.min.js"></script>
