删除无用文件

--- a/JiaoBaoYun-hb/html/show/show-home1.html
+++ b/JiaoBaoYun-hb/html/show/show-home1.html
@@ -30,7 +30,7 @@
 				<div class="mui-indicator mui-active"></div>
 				<div class="mui-indicator"></div>
 			</div>
-			<a id="publish-show" class="mui-pull-right">发布</a>
+			<a id="publish-show" class="mui-pull-right" style="">发布</a>
 		</header>
 		<!--	<div class="">-->
 		<!--slider控件-->
