--- a/JiaoBaoYun-hb/html/show/show-detail.html
+++ b/JiaoBaoYun-hb/html/show/show-detail.html
@@ -222,6 +222,7 @@
 			}
 
 			function rechargeData(showDetail, personInfoes) {
+				wd.close();
 				for(var i in personInfoes) {
 					if(showDetail.PublisherId == personInfoes[i].utid) {
 						showDetail.PublisherName = getName(personInfoes[i]);
@@ -349,7 +350,6 @@
 				postDataPro_PostUmk({
 					vvl: ids.toString()
 				}, wd, function(data) {
-			
 					console.log("获取的用户备注：" + JSON.stringify(data));
 					if(data.RspCode == 0) {
 						if(data.RspData.length > 0) {
