云盘首页刷新无法隐藏等待框

--- a/JiaoBaoYun-hb/html/cloud/cloud_home.html
+++ b/JiaoBaoYun-hb/html/cloud/cloud_home.html
@@ -371,6 +371,7 @@
 			mui.ajaxSettings.complete = function(xhr, status) {
 				httpFlag++;
 				if(httpFlag == 10) { //所有请求完毕
+					httpFlag=0;
 					wd.close();
 				}
 			}
