增加点击限定

--- a/JiaoBaoYun-hb/html/cloud/app_keeprecord.html
+++ b/JiaoBaoYun-hb/html/cloud/app_keeprecord.html
@@ -100,32 +100,26 @@
 				//顶部导航历史按钮
 				document.getElementById('history').addEventListener('tap', function() {
 					//跳到历史记录
-					var self = this;
-					self.disabled = true;
-					events.openNewWindowWithData('keeprecord_history_a.html', {
-						type: 'history', //显示的类型
-						gid: show, //群id
-						dataIdArray: qunInfos[show].dataIdArray, //Key
-						qunDataInfos: qunInfos[show].qunDataInfos, //群对象的资料
+					events.clickLimit(function() {
+						events.openNewWindowWithData('keeprecord_history_a.html', {
+							type: 'history', //显示的类型
+							gid: show, //群id
+							dataIdArray: qunInfos[show].dataIdArray, //Key
+							qunDataInfos: qunInfos[show].qunDataInfos, //群对象的资料
+						});
 					});
-					setTimeout(function() {
-						self.disabled = false;
-					}, 1500);
 				});
 
 				//统计
 				document.getElementById('statistics').addEventListener('tap', function() {
 					//跳到统计
-					var self = this;
-					self.disabled = true;
-					events.openNewWindowWithData('app_statistics.html', {
-						gid: show, //群id
-						dataIdArray: qunInfos[show].dataIdArray, //Key
-						qunDataInfos: qunInfos[show].qunDataInfos, //群对象的资料
+					events.clickLimit(function() {
+						events.openNewWindowWithData('app_statistics.html', {
+							gid: show, //群id
+							dataIdArray: qunInfos[show].dataIdArray, //Key
+							qunDataInfos: qunInfos[show].qunDataInfos, //群对象的资料
+						});
 					});
-					setTimeout(function() {
-						self.disabled = false;
-					}, 1500);
 				});
 
 				//切换显示选中的群
@@ -142,23 +136,21 @@
 
 				//监听点击成员
 				mui('.mui-content').on('tap', '.mui-table-view-cell', function() {
-					var self = this;
-					self.disabled = true;
-					var ids = this.parentNode.id.split('_');
-					//console.log(ids[0] + ' ' + ids[1] + ' ' + ids[2]);
-					var gid = ids[1]; //群id
-					var stuid = ids[2]; //资料id
-					var gname = qunInfos[gid].gname; //群名称
-					var stuname = qunInfos[gid].qunDataInfos[stuid].stuname; //资料名称
-					events.openNewWindowWithData('keeprecord_callorrecord_main.html', {
-						gid: gid,
-						gname: gname,
-						stuid: stuid,
-						stuname: stuname
+					var cell = this;
+					events.clickLimit(function() {
+						var ids = cell.parentNode.id.split('_');
+						//console.log(ids[0] + ' ' + ids[1] + ' ' + ids[2]);
+						var gid = ids[1]; //群id
+						var stuid = ids[2]; //资料id
+						var gname = qunInfos[gid].gname; //群名称
+						var stuname = qunInfos[gid].qunDataInfos[stuid].stuname; //资料名称
+						events.openNewWindowWithData('keeprecord_callorrecord_main.html', {
+							gid: gid,
+							gname: gname,
+							stuid: stuid,
+							stuname: stuname
+						});
 					});
-					setTimeout(function() {
-						self.disabled = false;
-					}, 1500);
 				});
 			}
 
