video标签添加内联播放

--- a/JiaoBaoYun-hb/html/cloud/keeprecord_history_a.html
+++ b/JiaoBaoYun-hb/html/cloud/keeprecord_history_a.html
@@ -177,7 +177,7 @@
 			</div>
 		</div>
 		<div id="videoPopover" class="mui-popover">
-			<video id="video" style="position: absolute;z-index: 999;" controls="controls">
+			<video id="video" style="position: absolute;z-index: 999;" controls="controls" webkit-playsinline playsinline>
 				您的浏览器不支持 video 标签。
 			</video>
 		</div>
