--- a/JiaoBaoYun-hb/html/cloud/storage_show_video.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_show_video.html
@@ -44,7 +44,7 @@
 			<h1 class="mui-title">视频播放</h1>
 		</header>
 		<div class="mui-content mui-fullscreen">
-			<video id="video" controls="controls" poster="null">
+			<video id="video" controls="controls" poster="null" webkit-playsinline playsinline>
 				您的浏览器不支持 video 标签。
 			</video>
 		</div>
