--- a/JiaoBaoYun-hb/html/cloud/app_notes_main.html
+++ b/JiaoBaoYun-hb/html/cloud/app_notes_main.html
@@ -322,7 +322,7 @@
 			</div>
 		</div>
 		<div id="videoPopover" class="mui-popover">
-			<video id="video" style="" controls="controls">
+			<video id="video" style="" controls="controls" webkit-playsinline playsinline>
 				您的浏览器不支持 video 标签。
 			</video>
 		</div>
